@@ -14,6 +14,7 @@
 * Removed deprecated and unmaintained entries from the Integrations section in the Settings.
 * Added new entries to the Integrations section for Events Manager, Formidable Forms, Ninja Forms.
 * Updated the Add-Ons section with Affiliates Import and other free add-ons.
+* Fixed the WooCommerce customer registration integration option is independent from the the user registration integration option.
 
 = 2.18.3 =
 * WordPress 4.9 compatibility tested.
